yml-coffe-tea-2/coffee-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: coffee-svc-2
  labels:
    app: coffee-2
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: coffee
