yml-coffe-tea-2/ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-svc-2
  labels:
    app: nginx-ingress-2
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
    port: 443
    protocol: TCP
    name: https
    targetPort: 443
  selector:
    app: nginx-ingress-2
  externalIPs:
  - 10.201.2.18
