yml-coffe-tea-2/tea-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tea-svc-2
  labels:
    app: tea-2
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: tea
