yml-coffe-tea-2/cafe-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress-2
spec:
  tls:
  - hosts:
    - cafe1.minvu.cl
    secretName: cafe-secret-2
  rules:
  - host: cafe1.minvu.cl
    http:
      paths:
      - path: /tea2
        backend:
          serviceName: tea-svc-2
          servicePort: 80
      - path: /coffee
        backend:
          serviceName: coffee-svc-2
          servicePort: 80
